--- a/src/main/resources/static/message.html
+++ b/src/main/resources/static/message.html
@@ -4,6 +4,10 @@
 <meta charset="UTF-8">
 <title>Messages</title>
 
+<script
+	src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+<script
+	src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
 
 <style>
 body.dark {
@@ -52,6 +56,7 @@ body.dark {
 }
 </style>
 </head>
+
 <body class="dark">
 
 	<div class="chat-container">
@@ -59,9 +64,7 @@ body.dark {
 			<h3>CryptoConnect Chat</h3>
 		</div>
 
-		<div id="message-box">
-			<!-- messages will appear here -->
-		</div>
+		<div id="message-box"></div>
 
 		<div class="chat-input">
 			<input type="text" id="messageInput" placeholder="Type a message..." />
@@ -70,24 +73,84 @@ body.dark {
 	</div>
 
 	<script>
-		function sendMessage() {
-			const input = document.getElementById("messageInput");
-			const messageBox = document.getElementById("message-box");
+let stompClient = null;
 
-			if (input.value.trim() === "")
-				return;
+const currentUser = JSON.parse(localStorage.getItem("currentUser") || "{}");
+const receiverUser = "admin";
 
-			const msg = document.createElement("div");
-			msg.textContent = input.value;
-			msg.style.padding = "8px";
-			msg.style.margin = "5px 0";
-			msg.style.background = "#333";
-			msg.style.borderRadius = "5px";
+if (!currentUser.username) {
+	alert("Please login first");
+	window.location.href = "login.html";
+}
 
-			messageBox.appendChild(msg);
-			messageBox.appendChild(msg);
-			input.value = "";
-		}
-	</script>
+function connectSocket() {
+	const socket = new SockJS("http://localhost:8080/ws");
+	stompClient = Stomp.over(socket);
+
+	stompClient.connect({}, () => {
+		stompClient.subscribe("/user/queue/messages", (msg) => {
+			const data = JSON.parse(msg.body);
+			if (data.sender !== currentUser.username) {
+				showMessage(data.sender, data.content, false);
+			}
+		});
+	});
+}
+
+connectSocket();
+
+async function loadChat(receiver) {
+	const res = await fetch(
+		`http://localhost:8080/api/chat/${currentUser.username}/${receiver}`
+	);
+	const messages = await res.json();
+
+	const box = document.getElementById("message-box");
+	box.innerHTML = "";
+
+	messages.forEach(m => {
+		showMessage(
+			m.sender === currentUser.username ? "You" : m.sender,
+			m.content,
+			m.sender === currentUser.username
+		);
+	});
+}
+
+loadChat(receiverUser);
+
+function sendMessage() {
+	const input = document.getElementById("messageInput");
+	const content = input.value.trim();
+
+	if (!content) return;
+
+	const message = {
+		sender: currentUser.username,
+		receiver: receiverUser,
+		content: content
+	};
+
+	stompClient.send("/app/chat.send", {}, JSON.stringify(message));
+	showMessage("You", content, true);
+	input.value = "";
+}
+
+function showMessage(sender, text, isSender) {
+	const box = document.getElementById("message-box");
+
+	const msg = document.createElement("div");
+	msg.innerHTML = `<b>${sender}:</b> ${text}`;
+	msg.style.padding = "8px";
+	msg.style.margin = "5px 0";
+	msg.style.borderRadius = "5px";
+	msg.style.background = isSender ? "#00bcd4" : "#333";
+	msg.style.color = isSender ? "#000" : "#fff";
+
+	box.appendChild(msg);
+	box.scrollTop = box.scrollHeight;
+}
+</script>
+
 </body>
 </html>
